--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,21 @@
 </head>
 <body>
 
-//= templates/sidebar/sidebar.html
+<div class="container">
+
+    <h1 class="h1">Котировка франшиз</h1>
+
+    <div class="content">
+
+        //= templates/sidebar/sidebar.html
+
+        //= templates/main/main.html
+
+    </div>
+    <!-- /.content -->
+
+</div>
+<!-- /.container -->
 
 
 <!-- JS -->
