--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,54 @@
 
 <div class="container">
 
-    <h1 class="h1">Котировка франшиз</h1>
+    <h1 class="h1">
+        Котировка франшиз
+        <span class="info" data-container="body" data-toggle="popover" data-placement="right" data-html="true"
+              data-content='
+              <ul class="popover__list">
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-1.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        На данной странице представлен независимый, открытый и бесплатный рэнкинг франшиз, иными словами, котировка франшиз.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-2.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Позиция в котировке и суммарный показатель зависят от открытости наблюдения покупателями, франчайзи и государством.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-3.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Суммарный показатель рассчитывается по нашей уникальной формуле согласно более чем 40 показателям.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-4.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Данная котировка является динамически обновляемой. <br> Вся представленная информация максимально актуальна.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-5.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Включение франшизы в котировку является бесплатным.
+                    </div>
+                </li>
+            </ul>
+        '>i</span>
+    </h1>
 
     <div class="content">
 
