Добавив інфо блок і баннер.

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,11 @@
     </div>
     <!-- /.content -->
 
+    <a href="/" class="banner">
+        <img src="assets/img/banner.jpg" alt="Banner">
+    </a>
+    <!-- /.banner -->
+
 </div>
 <!-- /.container -->
 
