--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 
+<div class="header mb-5">
+    <img src="assets/img/header.jpg" alt="">
+</div>
+
 <div class="container">
 
     <h1 class="h1">
