Для сторінки Котировки франшиз добавив верхнє інформаційне меню.

--- a/src/quotation.html
+++ b/src/quotation.html
@@ -28,6 +28,39 @@
     <!-- /.breadcrumb -->
 
     <h2 class="h2">Суши Мастер</h2>
+    
+    <div class="quotation__grid">
+        <div class="quotation__grid_item">
+            <div class="quotation__grid_item_left">
+                <div class="quotation__grid_item_ratio">
+                    1344.5
+                    <span class="ratio-up"></span>
+                </div>
+            </div>
+            <div class="quotation__grid_item_right">
+                <div class="quotation__grid_item_date">
+                    По состоянию на 10:00 Мск 04.12.2019
+                </div>
+                <div class="quotation__grid_item_position">
+                    Позиция в категории общепита: <span>&nbsp;4</span>
+                    <div class="quotation__grid_item_position_change">
+                        2
+                        <div class="quotation__grid_item_position_change_icon">
+                            <img src="assets/img/icons/up.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="quotation__grid_item">
+            <div class="quotation__grid_item_left">
+                <a href="/" class="link">Посмотреть карточку франшизы</a>
+            </div>
+            <div class="quotation__grid_item_right">
+                Статьи франшизы <a href="/">#СушиМастер</a>
+            </div>
+        </div>
+    </div>
 
     <a href="/" class="banner">
         <img src="assets/img/banner.jpg" alt="Banner">
