--- a/src/quotation.html
+++ b/src/quotation.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic"
+          rel="stylesheet">
 
     <!-- Useful meta tags -->
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="format-detection" content="telephone=no">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="telephone=no" name="format-detection">
     <title>BuyBrand</title>
 </head>
 <body>
 
 <div class="header mb-5">
-    <img src="assets/img/header.jpg" alt="">
+    <img alt="" src="assets/img/header.jpg">
 </div>
 
 <div class="container">
@@ -22,13 +23,13 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Котировка франшиз</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Суши Мастер</li>
+            <li aria-current="page" class="breadcrumb-item active">Суши Мастер</li>
         </ol>
     </nav>
     <!-- /.breadcrumb -->
 
     <h2 class="h2">Суши Мастер</h2>
-    
+
     <div class="quotation__grid">
         <div class="quotation__grid_item">
             <div class="quotation__grid_item_left">
@@ -46,7 +47,7 @@
                     <div class="quotation__grid_item_position_change">
                         2
                         <div class="quotation__grid_item_position_change_icon">
-                            <img src="assets/img/icons/up.png" alt="">
+                            <img alt="" src="assets/img/icons/up.png">
                         </div>
                     </div>
                 </div>
@@ -54,7 +55,7 @@
         </div>
         <div class="quotation__grid_item">
             <div class="quotation__grid_item_left">
-                <a href="/" class="link">Посмотреть карточку франшизы</a>
+                <a class="link" href="/">Посмотреть карточку франшизы</a>
             </div>
             <div class="quotation__grid_item_right">
                 Статьи франшизы <a href="/">#СушиМастер</a>
@@ -62,8 +63,116 @@
         </div>
     </div>
 
-    <a href="/" class="banner">
-        <img src="assets/img/banner.jpg" alt="Banner">
+    <div class="container-small">
+
+        <img alt="" src="assets/img/chart.png">
+
+        <div class="table mt-5">
+            <a href="#table-1" class="btn-all btn-all-table">
+                <span class="btn-all__arrow"></span>
+            </a>
+            <div class="thead">
+                <div class="tr">
+                    <div class="th">Наименование</div>
+                    <div class="th">2018 год</div>
+                    <div class="th">2019 год</div>
+                    <div class="th">Граф. показатель</div>
+                </div>
+            </div>
+            <div class="tbody toggle-content" id="table-1">
+                <div class="tr">
+                    <div class="td">Объем инвестиций (млн руб.)</div>
+                    <div class="td">16 000 000</div>
+                    <div class="td">24 000 000 <span class="ratio-up"></span></div>
+                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Количество точек</div>
+                    <div class="td">20</div>
+                    <div class="td">24<span class="ratio-up"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Точек за рубежом</div>
+                    <div class="td">6</div>
+                    <div class="td">5<span class="ratio-down"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Срок существования (в годах)</div>
+                    <div class="td">5</div>
+                    <div class="td">6<span class="ratio-up"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Капитализация</div>
+                    <div class="td">375 000 000</div>
+                    <div class="td">574 000 000<span class="ratio-up"></span></div>
+                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Судебные иски</div>
+                    <div class="td">2</div>
+                    <div class="td">0<span class="ratio-down"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Стоимость франшизы</div>
+                    <div class="td">600 000 000</div>
+                    <div class="td">900 000 000<span class="ratio-up"></span></div>
+                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Объем инвестиций (млн руб.)</div>
+                    <div class="td">16 000 000</div>
+                    <div class="td">24 000 000 <span class="ratio-up"></span></div>
+                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Количество точек</div>
+                    <div class="td">20</div>
+                    <div class="td">24<span class="ratio-up"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Точек за рубежом</div>
+                    <div class="td">6</div>
+                    <div class="td">5<span class="ratio-down"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Срок существования (в годах)</div>
+                    <div class="td">5</div>
+                    <div class="td">6<span class="ratio-up"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Капитализация</div>
+                    <div class="td">375 000 000</div>
+                    <div class="td">574 000 000<span class="ratio-up"></span></div>
+                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Судебные иски</div>
+                    <div class="td">2</div>
+                    <div class="td">0<span class="ratio-down"></span></div>
+                    <div class="td"></div>
+                </div>
+                <div class="tr">
+                    <div class="td">Стоимость франшизы</div>
+                    <div class="td">600 000 000</div>
+                    <div class="td">900 000 000<span class="ratio-up"></span></div>
+                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                </div>
+            </div>
+        </div>
+        <!-- /.table -->
+
+    </div>
+    <!-- /.container-small -->
+
+    <a class="banner" href="/">
+        <img alt="Banner" src="assets/img/banner.jpg">
     </a>
     <!-- /.banner -->
 
