Added Quotation Page.

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,8 @@
     </div>
     <!-- /.content -->
 
+    //= templates/seo/seo.html
+
     <a href="/" class="banner">
         <img src="assets/img/banner.jpg" alt="Banner">
     </a>
