--- a/src/quotation.html
+++ b/src/quotation.html
@@ -67,7 +67,7 @@
 
         <img alt="" src="assets/img/chart.png">
 
-        <div class="table mt-5">
+        <div class="quotation__table table mt-5">
             <a href="#table-1" class="btn-all btn-all-table">
                 <span class="btn-all__arrow"></span>
             </a>
@@ -170,6 +170,10 @@
 
     </div>
     <!-- /.container-small -->
+
+    //= templates/about/about.html
+
+    //= templates/seo/seo.html
 
     <a class="banner" href="/">
         <img alt="Banner" src="assets/img/banner.jpg">
