Quotation: переробив заголовок.

--- a/src/quotation.html
+++ b/src/quotation.html
@@ -28,7 +28,56 @@
     </nav>
     <!-- /.breadcrumb -->
 
-    <h2 class="h2">Суши Мастер</h2>
+    <div class="quotation__head">
+        <h2 class="h2">Суши Мастер</h2>
+        <img class="quotation__head_logo"  src="../../assets/img/company-logo.jpg" alt="">
+        <span class="info" data-container="body" data-toggle="popover" data-placement="right" data-html="true"
+              data-content='
+              <ul class="popover__list">
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-1.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        На данной странице представлен независимый, открытый и бесплатный рэнкинг франшиз, иными словами, котировка франшиз.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-2.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Позиция в котировке и суммарный показатель зависят от открытости наблюдения покупателями, франчайзи и государством.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-3.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Суммарный показатель рассчитывается по нашей уникальной формуле согласно более чем 40 показателям.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-4.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Данная котировка является динамически обновляемой. <br> Вся представленная информация максимально актуальна.
+                    </div>
+                </li>
+                <li class="popover__list_item">
+                    <div class="popover__list_item_icon">
+                        <img src="assets/img/icons/info-icon-5.svg" alt="">
+                    </div>
+                    <div class="popover__list_item_text">
+                        Включение франшизы в котировку является бесплатным.
+                    </div>
+                </li>
+            </ul>
+        '>i</span>
+        <a class="play"></a>
+    </div>
 
     <div class="quotation__grid">
         <div class="quotation__grid_item">
