Quotation: переробив блок з чартом і інформацією для нього.

--- a/src/quotation.html
+++ b/src/quotation.html
@@ -80,49 +80,46 @@
     </div>
 
     <div class="quotation__grid">
-        <div class="quotation__grid_item">
-            <div class="quotation__grid_item_left">
-                <div class="quotation__grid_item_ratio">
-                    1344.5
-                    <span class="ratio-up"></span>
+
+        <div class="quotation__info">
+            <div class="quotation__info_date">
+                По состоянию на 10:00 Мск 04.12.2019
+            </div>
+            <div class="quotation__info_ratio">
+                1344.5
+            </div>
+            <div class="quotation__info_arrow">
+                <span class="ratio-up"></span>
+                102 (5%)
+            </div>
+            <div class="quotation__info_position">
+                Общая позиция: <span>&nbsp;4</span>
+                <div class="quotation__info_position_change">
+                    2
+                    <div class="quotation__info_position_change_icon">
+                        <img alt="" src="assets/img/icons/up.png">
+                    </div>
                 </div>
             </div>
-            <div class="quotation__grid_item_right">
-                <div class="quotation__grid_item_date">
-                    По состоянию на 10:00 Мск 04.12.2019
-                </div>
-                <div class="quotation__grid_item_position">
-                    Позиция в категории общепита: <span>&nbsp;4</span>
-                    <div class="quotation__grid_item_position_change">
-                        2
-                        <div class="quotation__grid_item_position_change_icon">
-                            <img alt="" src="assets/img/icons/up.png">
-                        </div>
+            <div class="quotation__info_position">
+                Позиция в категории общепита: <span>&nbsp;4</span>
+                <div class="quotation__info_position_change">
+                    2
+                    <div class="quotation__info_position_change_icon">
+                        <img alt="" src="assets/img/icons/up.png">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="quotation__grid_item">
-            <div class="quotation__grid_item_left">
-                <a class="link" href="/">Посмотреть карточку франшизы</a>
-            </div>
-            <div class="quotation__grid_item_right">
-                Статьи франшизы <a href="/">#СушиМастер</a>
-            </div>
-        </div>
-    </div>
 
-    <div class="container-small">
-
-        <div class="quotation__chart_collapsed collapsed" data-toggle="collapse" data-target="#quotationChart-1" aria-expanded="false" aria-controls="quotationChart-1">
-            <div class="chart-table__block_menu_dropdown">
-                <div class="quotation__chart_collapsed_text"></div>
-                <div class="quotation__chart_collapsed_arrow"></div>
-            </div>
-        </div>
-        <div class="collapse" id="quotationChart-1">
+        <div class="quotation__chart">
             <canvas id="myChart"></canvas>
         </div>
+
+    </div>
+    <!-- /.content -->
+
+    <div class="container-small">
 
         <div class="quotation__table table mt-5">
             <a href="#table-1" class="btn-all btn-all-table">
