Quotation: добавив таби для чарта.

--- a/src/quotation.html
+++ b/src/quotation.html
@@ -113,6 +113,11 @@
         </div>
 
         <div class="quotation__chart">
+            <div class="quotation__chart_links">
+                <a href="#" class="quotation__chart_links_item">Коэффициент</a>
+                <a href="#" class="quotation__chart_links_item">Точки</a>
+                <a href="#" class="quotation__chart_links_item active">Оборотный объем</a>
+            </div>
             <canvas id="myChart"></canvas>
         </div>
 
