Quatation: переробив контентну частину і таблицю.

--- a/src/quotation.html
+++ b/src/quotation.html
@@ -90,7 +90,7 @@
             </div>
             <div class="quotation__info_arrow">
                 <span class="ratio-up"></span>
-                102 (5%)
+                <span class="ratio-text up">102 (5%)</span>
             </div>
             <div class="quotation__info_position">
                 Общая позиция: <span>&nbsp;4</span>
@@ -124,115 +124,86 @@
     </div>
     <!-- /.content -->
 
-    <div class="container-small">
+    <div class="quotation__content">
 
-        <div class="quotation__table table mt-5">
-            <a href="#table-1" class="btn-all btn-all-table">
-                <span class="btn-all__arrow"></span>
-            </a>
-            <div class="thead">
-                <div class="tr">
-                    <div class="th">Наименование</div>
-                    <div class="th">2018 год</div>
-                    <div class="th">2019 год</div>
-                    <div class="th">Граф. показатель</div>
+        <div class="quotation__main">
+
+            <div class="quotation__table table">
+                <div class="thead">
+                    <div class="tr">
+                        <div class="th">Наименование</div>
+                        <div class="th">2019 год</div>
+                        <div class="th">Граф. показатель</div>
+                    </div>
+                </div>
+                <div class="tbody">
+                    <div class="tr">
+                        <div class="td">Объем инвестиций (млн руб.)</div>
+                        <div class="td">
+                            24 000 000
+                            <span class="ratio-up"></span>
+                            <span class="ratio-text up">102 (5%)</span>
+                        </div>
+                        <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                    </div>
+                    <div class="tr">
+                        <div class="td">Количество точек</div>
+                        <div class="td">
+                            24
+                            <span class="ratio-up"></span>
+                            <span class="ratio-text up">102 (5%)</span>
+                        </div>
+                        <div class="td"></div>
+                    </div>
+                    <div class="tr">
+                        <div class="td">Точек за рубежом</div>
+                        <div class="td">
+                            5
+                            <span class="ratio-down"></span>
+                            <span class="ratio-text down">102 (5%)</span>
+                        </div>
+                        <div class="td"></div>
+                    </div>
+                    <div class="tr">
+                        <div class="td">Срок существования (в годах)</div>
+                        <div class="td">6<span class="ratio-up"></span><span class="ratio-text up">102 (5%)</span></div>
+                        <div class="td"></div>
+                    </div>
+                    <div class="tr">
+                        <div class="td">Капитализация</div>
+                        <div class="td">574 000 000<span class="ratio-up"></span><span class="ratio-text up">102 (5%)</span></div>
+                        <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                    </div>
+                    <div class="tr">
+                        <div class="td">Судебные иски</div>
+                        <div class="td">0<span class="ratio-down"></span><span class="ratio-text down">102 (5%)</span></div>
+                        <div class="td"></div>
+                    </div>
+                    <div class="tr">
+                        <div class="td">Стоимость франшизы</div>
+                        <div class="td">900 000 000<span class="ratio-up"></span><span class="ratio-text up">102 (5%)</span></div>
+                        <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
+                    </div>
                 </div>
             </div>
-            <div class="tbody toggle-content" id="table-1">
-                <div class="tr">
-                    <div class="td">Объем инвестиций (млн руб.)</div>
-                    <div class="td">16 000 000</div>
-                    <div class="td">24 000 000 <span class="ratio-up"></span></div>
-                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Количество точек</div>
-                    <div class="td">20</div>
-                    <div class="td">24<span class="ratio-up"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Точек за рубежом</div>
-                    <div class="td">6</div>
-                    <div class="td">5<span class="ratio-down"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Срок существования (в годах)</div>
-                    <div class="td">5</div>
-                    <div class="td">6<span class="ratio-up"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Капитализация</div>
-                    <div class="td">375 000 000</div>
-                    <div class="td">574 000 000<span class="ratio-up"></span></div>
-                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Судебные иски</div>
-                    <div class="td">2</div>
-                    <div class="td">0<span class="ratio-down"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Стоимость франшизы</div>
-                    <div class="td">600 000 000</div>
-                    <div class="td">900 000 000<span class="ratio-up"></span></div>
-                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Объем инвестиций (млн руб.)</div>
-                    <div class="td">16 000 000</div>
-                    <div class="td">24 000 000 <span class="ratio-up"></span></div>
-                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Количество точек</div>
-                    <div class="td">20</div>
-                    <div class="td">24<span class="ratio-up"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Точек за рубежом</div>
-                    <div class="td">6</div>
-                    <div class="td">5<span class="ratio-down"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Срок существования (в годах)</div>
-                    <div class="td">5</div>
-                    <div class="td">6<span class="ratio-up"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Капитализация</div>
-                    <div class="td">375 000 000</div>
-                    <div class="td">574 000 000<span class="ratio-up"></span></div>
-                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Судебные иски</div>
-                    <div class="td">2</div>
-                    <div class="td">0<span class="ratio-down"></span></div>
-                    <div class="td"></div>
-                </div>
-                <div class="tr">
-                    <div class="td">Стоимость франшизы</div>
-                    <div class="td">600 000 000</div>
-                    <div class="td">900 000 000<span class="ratio-up"></span></div>
-                    <div class="td"><img alt="" src="assets/img/chart-1.png"></div>
-                </div>
-            </div>
+            <!-- /.table -->
+
+            //= templates/about/about.html
+
         </div>
-        <!-- /.table -->
+        <!-- /.quotation__main -->
+
+        <div class="quotation__sidebar">
+
+            <div class="sidebar__advertising">
+                <img src="../../assets/img/sidebar-advertising.jpg" alt="">
+            </div>
+
+        </div>
+        <!-- /.quotation__sidebar -->
 
     </div>
-    <!-- /.container-small -->
-
-    //= templates/about/about.html
-
-    //= templates/seo/seo.html
+    <!-- /.quotation__content -->
 
     <a class="banner" href="/">
         <img alt="Banner" src="assets/img/banner.jpg">
