--- a/src/quotation.html
+++ b/src/quotation.html
@@ -199,6 +199,8 @@
                 <img src="../../assets/img/sidebar-advertising.jpg" alt="">
             </div>
 
+            //= templates/sidebar-news/sidebar-news.html
+
         </div>
         <!-- /.quotation__sidebar -->
 
