Quotation: Desktop version ready.

--- a/src/quotation.html
+++ b/src/quotation.html
@@ -190,6 +190,10 @@
 
             //= templates/about/about.html
 
+            //= templates/about-franchise/about-franchise.html
+
+            //= templates/more-text/more-text.html
+
         </div>
         <!-- /.quotation__main -->
 
