Quotation: Added mobile version.

--- a/src/quotation.html
+++ b/src/quotation.html
@@ -79,9 +79,9 @@
         <a class="play"></a>
     </div>
 
-    <div class="quotation__grid">
+    <div class="quotation__grid row">
 
-        <div class="quotation__info">
+        <div class="quotation__info col-lg-3">
             <div class="quotation__info_date">
                 По состоянию на 10:00 Мск 04.12.2019
             </div>
@@ -112,7 +112,7 @@
             </div>
         </div>
 
-        <div class="quotation__chart">
+        <div class="quotation__chart col-lg-9 mt-5 mt-lg-0">
             <div class="quotation__chart_links">
                 <a href="#" class="quotation__chart_links_item">Коэффициент</a>
                 <a href="#" class="quotation__chart_links_item">Точки</a>
@@ -124,9 +124,9 @@
     </div>
     <!-- /.content -->
 
-    <div class="quotation__content">
+    <div class="quotation__content row">
 
-        <div class="quotation__main">
+        <div class="quotation__main col-lg-9">
 
             <div class="quotation__table table">
                 <div class="thead">
@@ -197,7 +197,7 @@
         </div>
         <!-- /.quotation__main -->
 
-        <div class="quotation__sidebar">
+        <div class="quotation__sidebar col-lg-3">
 
             <div class="sidebar__advertising">
                 <img src="../../assets/img/sidebar-advertising.jpg" alt="">
